--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.9",
     "craco-less": "^2.1.0-alpha.0",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
