添加antd 框架 搭建发现音乐子路由封装 路由列表

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "antd": "^5.22.5",
     "axios": "^1.7.9",
     "craco-less": "^2.1.0-alpha.0",
     "normalize.css": "^8.0.1",
@@ -50,12 +52,14 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@eslint/js": "^9.16.0",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
+    "styled-components": "^6.1.13",
     "typescript-eslint": "^8.17.0"
   }
 }
