--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@eslint/js": "^9.16.0",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
+    "styled-components": "^6.1.13",
     "typescript-eslint": "^8.17.0"
   }
 }
